# pojde-rs

./: Cargo.toml  Hydrunfile  Makefile  README.md
.github/workflows/: hydrun.yml
src/: cli.rs  gui.rs  instances.rs  lib.rs  main.rs  update.rs  widgets.rs
