[package]
name = "pojdectl-rs"
version = "0.1.0"
authors = ["Felix Pojtinger <felix@pojtinger.com>"]
edition = "2018"
description = "Experimental Rust implementation of https://github.com/pojntfx/pojde's `pojdectl`."
license = "AGPL-3.0"
resolver= "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
futures = "0.3.15"
spinners = "1.2.0"
ansi-escapes = "0.1.0"
self_update = "0.27.0"
tabled = "0.2.2"

# Use default features for all systems except mingw and RISC-V
[target.'cfg(not(any(target_os = "windows", target_arch = "riscv64")))'.dependencies]
shiplift = { git = "https://github.com/softprops/shiplift.git" } # TODO: Use non-git version once https://github.com/softprops/shiplift/pull/282 is in a release

# We don't have a multiarch mingw Debian package for OpenSSL yet, so use the vendored version; also disable UNIX-only features
[target.'cfg(target_os = "windows")'.dependencies]
shiplift = { git = "https://github.com/softprops/shiplift.git", features = ["chrono", "vendored-ssl"], default-features = false }

# We don't have a multiarch RISC-V Debian package for OpenSSL yet, so use the vendored version
[target.'cfg(target_arch = "riscv64")'.dependencies]
shiplift = { git = "https://github.com/softprops/shiplift.git", features = ["chrono", "unix-socket", "vendored-ssl"], default-features = false }

# Use eframe on all targets except riscv64
[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
eframe = "0.13.1"
serde = { version = "1", features = ["derive"], optional = true }
scopeguard = "1.1.0"

[dev-dependencies]
cargo-watch = "7.8.0"

[[bin]]
name = "pojdectl-rs"
path = "src/cli.rs"

[[bin]]
name = "pojdegui-rs"
path = "src/gui.rs"

[lib]
path = "src/lib.rs"